--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 index.html
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Quiz</title>
+</head>
+<body>
+  <h1>Funcionou! 🎉</h1>
+</body>
+</html>
