--- a/index.html
+++ b/index.html
@@ -1,40 +1,25 @@
-index.htm
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto Mais Ciência - Botos da Amazônia</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
     <header>
         <h1>Projeto Científico: Conservação dos Botos da Amazônia</h1>
-        <p class="sub">Um estudo interativo sobre o Boto-cor-de-rosa e o Tucuxi</p>
+        <p class="sub">Quiz Educativo — Boto-cor-de-Rosa e Tucuxi</p>
     </header>
-
-    <section class="sobre">
-        <h2>Sobre o Projeto</h2>
-        <p>
-            Este projeto foi criado para o programa <strong>Mais Ciência</strong>, com o objetivo de 
-            conscientizar sobre a importância dos botos amazônicos.  
-            O site traz informações científicas e dois quizzes educativos para testar 
-            seus conhecimentos sobre cada espécie.
-        </p>
-    </section>
 
     <section class="opcoes">
         <h2>Escolha seu Quiz</h2>
 
         <div class="botoes">
-            <a class="botao rosa" href="quiz-rosa.html">🐬 Quiz: Boto-cor-de-rosa</a>
+            <a class="botao rosa" href="quiz-rosa.html">🐬 Quiz: Boto-cor-de-Rosa</a>
             <a class="botao azul" href="quiz-tucuxi.html">🐬 Quiz: Tucuxi</a>
         </div>
     </section>
-
-    <footer>
-        <p>Desenvolvido por Lilian Lima • Programa Mais Ciência</p>
-    </footer>
 </body>
 </html>
