--- a/index.html
+++ b/index.html
@@ -1,25 +1,197 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projeto Mais Ciência - Botos da Amazônia</title>
-    <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Quiz dos Botos</title>
+
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        background: #fce4ec;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+    }
+
+    h1 {
+        color: #d81b60;
+        margin-top: 30px;
+    }
+
+    .menu {
+        margin-top: 40px;
+    }
+
+    .menu button {
+        background: #ff80ab;
+        border: none;
+        padding: 15px 30px;
+        margin: 10px;
+        font-size: 18px;
+        border-radius: 10px;
+        cursor: pointer;
+        color: white;
+        transition: 0.2s;
+    }
+
+    .menu button:hover {
+        background: #ec407a;
+    }
+
+    #quizBox {
+        margin-top: 40px;
+        background: white;
+        padding: 20px;
+        border-radius: 10px;
+        width: 90%;
+        max-width: 500px;
+        margin-left: auto;
+        margin-right: auto;
+        box-shadow: 0 0 10px #999;
+        display: none;
+    }
+
+    .opcao {
+        display: block;
+        background: #f8bbd0;
+        padding: 10px;
+        margin: 8px 0;
+        border-radius: 6px;
+        cursor: pointer;
+    }
+
+    .opcao:hover {
+        background: #f48fb1;
+    }
+
+    #resultado {
+        font-size: 22px;
+        margin-top: 20px;
+        font-weight: bold;
+    }
+
+</style>
+
 </head>
-
 <body>
-    <header>
-        <h1>Projeto Científico: Conservação dos Botos da Amazônia</h1>
-        <p class="sub">Quiz Educativo — Boto-cor-de-Rosa e Tucuxi</p>
-    </header>
 
-    <section class="opcoes">
-        <h2>Escolha seu Quiz</h2>
+<h1>Quiz dos Botos</h1>
 
-        <div class="botoes">
-            <a class="botao rosa" href="quiz-rosa.html">🐬 Quiz: Boto-cor-de-Rosa</a>
-            <a class="botao azul" href="quiz-tucuxi.html">🐬 Quiz: Tucuxi</a>
-        </div>
-    </section>
+<div class="menu">
+    <button onclick="iniciarQuiz('rosa')">🐬 Boto-Cor-de-Rosa</button>
+    <button onclick="iniciarQuiz('tucuxi')">🐬 Boto Tucuxi</button>
+</div>
+
+<div id="quizBox">
+    <h2 id="pergunta"></h2>
+    <div id="opcoes"></div>
+    <p id="resultado"></p>
+</div>
+
+<script>
+// ----------------------------
+// PERGUNTAS DOS DOIS QUIZZES
+// ----------------------------
+const quizzes = {
+    rosa: [
+        {
+            pergunta: "Onde o boto-cor-de-rosa vive?",
+            opcoes: ["Amazônia", "Antártida", "África"],
+            correta: 0
+        },
+        {
+            pergunta: "O boto-cor-de-rosa é um:",
+            opcoes: ["Peixe", "Mamífero", "Réptil"],
+            correta: 1
+        },
+        {
+            pergunta: "Qual é a cor típica do boto-cor-de-rosa adulto?",
+            opcoes: ["Cinza", "Branco", "Rosa"],
+            correta: 2
+        }
+    ],
+
+    tucuxi: [
+        {
+            pergunta: "Onde o boto Tucuxi costuma viver?",
+            opcoes: ["Rios da Amazônia", "Oceano Atlântico", "Lagos do sul"],
+            correta: 0
+        },
+        {
+            pergunta: "O Tucuxi se parece com:",
+            opcoes: ["Golfinho marinho", "Tubarão", "Tartaruga"],
+            correta: 0
+        },
+        {
+            pergunta: "A cor do Tucuxi geralmente é:",
+            opcoes: ["Azul metálico", "Cinza-escuro", "Amarelo"],
+            correta: 1
+        }
+    ]
+};
+
+// ----------------------------
+// LÓGICA DO QUIZ
+// ----------------------------
+let perguntas = [];
+let indice = 0;
+let acertos = 0;
+
+function iniciarQuiz(tipo) {
+    perguntas = quizzes[tipo];
+    indice = 0;
+    acertos = 0;
+
+    document.getElementById("quizBox").style.display = "block";
+    mostrarPergunta();
+}
+
+function mostrarPergunta() {
+    const atual = perguntas[indice];
+    document.getElementById("pergunta").innerText = atual.pergunta;
+
+    const opcoesDiv = document.getElementById("opcoes");
+    opcoesDiv.innerHTML = ""; 
+
+    atual.opcoes.forEach((opcao, i) => {
+        const btn = document.createElement("div");
+        btn.className = "opcao";
+        btn.innerText = opcao;
+        btn.onclick = () => verificarResposta(i);
+        opcoesDiv.appendChild(btn);
+    });
+
+    document.getElementById("resultado").innerText = "";
+}
+
+function verificarResposta(i) {
+    if (i === perguntas[indice].correta) {
+        acertos++;
+        document.getElementById("resultado").innerText = "✔ Acertou!";
+        document.getElementById("resultado").style.color = "green";
+    } else {
+        document.getElementById("resultado").innerText = "❌ Errou!";
+        document.getElementById("resultado").style.color = "red";
+    }
+
+    setTimeout(() => {
+        indice++;
+        if (indice < perguntas.length) {
+            mostrarPergunta();
+        } else {
+            mostrarResultadoFinal();
+        }
+    }, 900);
+}
+
+function mostrarResultadoFinal() {
+    document.getElementById("pergunta").innerText = "Fim do quiz!";
+    document.getElementById("opcoes").innerHTML = "";
+    document.getElementById("resultado").innerText = `Você acertou ${acertos} de ${perguntas.length}!`;
+}
+
+</script>
+
 </body>
 </html>
