--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 
     <main>
         <div class="quiz-container">
-            <div class="question">Clique em Iniciar para começar!</div>
+            <div class="question">Carregando Quiz...</div>
 
             <div class="options">
-                <button id="start-button" onclick="loadQuestion()">Iniciar Quiz</button>
-            </div>
+                </div>
 
             <div id="result"></div>
         </div>
