--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Início | Projeto Mais Ciência na Escola</title>
     <link rel="stylesheet" href="style.css"> 
     <style>
-        /* Estilos para deixar o menu principal menor e mais centralizado (Compacto) */
+        /* Estilo local para manter o menu principal compacto */
         .game-menu {
             max-width: 500px; 
             margin-top: 100px; 
@@ -24,9 +24,9 @@
     <nav>
         <ul class="nav-links">
             <li><a href="index.html">Início (Temas)</a></li>
-            <li><a href="estudo-botos.html">Estudo Botos</a></li>
-            <li><a href="#">Sobre o Projeto</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="estudo-botos.html">Botos da Amazônia</a></li>
+            <li><a href="#">Taxonomia</a></li>
+            <li><a href="#">Ecossistemas</a></li>
         </ul>
     </nav>
 
